Closed Bug 340028 Opened 18 years ago Closed 18 years ago

Rendering problem in <svg:image> on intel macs

Categories

(Core :: SVG, defect)

1.8 Branch
PowerPC
macOS
defect
Not set
normal

Tracking

()

VERIFIED FIXED

People

(Reporter: ahayes, Assigned: tor)

References

()

Details

(Keywords: fixed1.8.1, verified1.8.0.5)

Attachments

(4 files)

When an image is loaded via <svg:image>, it is not rendered correctly.

<http://www.croczilla.com/svg/samples/circles2/circles2.xml>
Sorry. I should have explicitly mentioned in the description that I am refering to a problem on intel macs and have seen the problem on the following browsers when running without rosetta:

Camino Version 2006060104 (1.0+)
Mozilla/5.0 (Macintosh; U; Intel Mac OS X; en-US; rv:1.8.0.4) Gecko/20060508 Firefox/1.5.0.4
Mozilla/5.0 (Macintosh; U; Intel Mac OS X; en-US; rv:1.8.1a3) Gecko/20060526 BonEcho/2.0a3
This bug is a followup to bug 327744.
Adding Jay and Josh since they were also involved in sorting out bug 327744.
Amos: Did you mean to cc another Jay?  Because I don't think I'll be much help here (I'm the QA/Talkback guy). ;-)
Pleased to meet you Jay. I'm a relatively new bugzilla participant. My interest in some parts of Firefox stems from having a lab of intel macs & people who are trying to build an online atlas that uses Firefox SVG quite heavily. :)

Sorry about the CC out of the blue. There are a couple of these mac&intel&svg bugs left and since you seemed to be involved in triage on bug 327744, I thought maybe you'd want to see this one as well. I'd love to see all the endian bugs solved for some 1.5.0.x version of Firefox in the not too distant future. Unfortunately, my capacity at the moment is to log bugs and produce testcases.

Anyway, if there is interest/capacity to automate SVG rendering tests, I'd be happy to help create a few SVG files for a testsuite.
Attachment #225022 - Attachment description: untested patch for os-x intel svg:image → untested branch patch for os-x intel svg:image
Without the patch tor just posted, the croc looks like this.
Attached image patched croc screenshot
with tor's patch, this is what the croc looks like
Not pretty, but I'd prefer to do the minimal amount of change to the code logic on the branch.
Assignee: general → tor
Status: NEW → ASSIGNED
Attachment #225289 - Flags: review?(jhpedemonte)
Attachment #225289 - Flags: review?(jhpedemonte) → review+
Thanks for the new patch tor. I have tested this patch on the MOZILLA_1_8_0 branch using the universal build instructions at:

http://developer.mozilla.org/en/docs/Mac_OS_X_Universal_Binaries

plus the following additions to the .mozconfig:

ac_add_options --enable-canvas
ac_add_options --enable-svg

and confirm that the circles2.xml crockzilla example now renders properly on intel mac. I also tried setting my build to "Open using Rosetta" and confirm that the circles2.xml test case still works there too.
Flags: blocking1.8.1?
Flags: blocking1.8.0.5?
Please get landed on trunk and 1.8 branch (after module owner approval, which I guess could be tor himself) for verification, then ask for 1.8.0.5 approval. Code freeze is approaching fast...
Flags: blocking1.8.0.5? → blocking1.8.0.5+
Flags: blocking1.8.1? → blocking1.8.1+
Attachment #225289 - Flags: approval1.8.0.5?
Attachment #225289 - Flags: approval-branch-1.8.1?(shaver)
Comment on attachment 225289 [details] [diff] [review]
tested branch intel os-x svg:image patch

181=shaver
Attachment #225289 - Flags: approval-branch-1.8.1?(shaver) → approval-branch-1.8.1+
Checked in on MOZILLA_1_8_BRANCH.
Keywords: fixed1.8.1
Comment on attachment 225289 [details] [diff] [review]
tested branch intel os-x svg:image patch

approved for 1.8.0 branch, a=dveditz for drivers
Attachment #225289 - Flags: approval1.8.0.5? → approval1.8.0.5+
Checked in on MOZILLA_1_8_0_BRANCH.
Keywords: fixed1.8.0.5
Checked in on trunk.
Status: ASSIGNED → RESOLVED
Closed: 18 years ago
Resolution: --- → FIXED
Verified using test images provided, on: Mozilla/5.0 (Macintosh; U; Intel Mac OS X; en-US; rv:1.8.0.5) Gecko/20060619 Firefox/1.5.0.5

Macbook Pro, MacOS X 10.4.6

Image is now rendered as it is in the Wintel version.
Status: RESOLVED → VERIFIED
You need to log in before you can comment on or make changes to this bug.