Bug 340028 - <svg:image> rendering problems on Intel OS-X. r=pedemonte, a=shaver